[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Benoit Paquet <benoxoft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
itertools = "0.8.2"
gcd = "1.2.0"
lazy_static = "1.4.0"
